--- a/README.org
+++ b/README.org
@@ -1,10 +1,9 @@
 * purgatory
 
+A client implementation of the 9P file protocol
 
-
-|---------+-------------------------------------------|
-| source  | git:https://notabug.org/cage/purgatory.git   |
-| commit  |   |
-| systems | purgatory |
-|---------+-------------------------------------------|
-
+|---------+--------------------------------------------|
+| source  | git:https://notabug.org/cage/purgatory.git |
+| commit  | 3afd8f6bb4                                 |
+| systems | purgatory                                  |
+|---------+--------------------------------------------|
